sudojoss-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sudojoss
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: sudojoss
            servicePort: 8081
        - path: /aria2/?(.*)
          backend:
            serviceName: aria2
            servicePort: 80
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - sudojoss.com
    - www.sudojoss.com
