voyager-ingress.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
    ingress.appscode.com/type: HostPort
    ingress.appscode.com/monitoring-agent: 'prometheus.io/builtin'
    # ingress.appscode.com/ssl-redirect: "true"
    # ingress.appscode.com/ssl-passthrough: "true"
    # ingress.appscode.com/proxy-body-size: "819200" #10G
  name: k8s-ingress
  # namespace: kube-system
spec:
  rules:
  - host: www.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: sudojoss
            servicePort: 8081
        - path: /aria2
          backend:
            serviceName: aria2
            servicePort: 80

  - host: cloud.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: nextcloud
            servicePort: 443

  - host: blog.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: ghost
            servicePort: 2368

  - host: prometheus.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: prometheus-server
            servicePort: 80

  - host: grafana.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: grafana
            servicePort: 80

  - host: ops.sudojoss.com
    tcp:
      port: 3306
      backend:
        serviceName: mysql
        servicePort: 3306

  - host: test.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: kubernetes-dashboard
            servicePort: 443

  tls: 
  - secretName: sudojoss-tls
    hosts:
    - sudojoss.com
    - www.sudojoss.com
    - cloud.sudojoss.com
    - blog.sudojoss.com
    - prometheus.sudojoss.com
    - grafana.sudojoss.com
    - test.sudojoss.com
